--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>'Primera' Pagina HTML</title>
-    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-
+    
     <link
         href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-
+        
     <!-- ICONS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./responsive.css">
+
 
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
@@ -81,7 +83,7 @@
             <div class="video-container">
                 <video controls
                     poster="https://cms.kerrang.com/images/twenty-one-pilots-Trench-header-album-cover.jpg">
-                    <source src="/media/20190506_215844_Trim.mp4" type="video/mp4">
+                    <source src="./media/20190506_215844_Trim.mp4" type="video/mp4">
                 </video>
                 <img width="150px"
                     src="https://images.vexels.com/media/users/3/206269/isolated/preview/5bf110f14d50531aaca26c251c3441aa-doodle-de-flecha-vertical.png"
@@ -242,10 +244,51 @@
             </div>
         </div>
     </section>
+    <section class="call">
+        <img src="./svg/Audio conversation.svg" alt="Conversation">
+        <h4>Try Matcha free for 14 days</h>
+        <form>
+            <div class="">
+                <input type="email" name="email"/><button>Sing Up Free <i class="bi bi-arrow-right"></i></button>
+            </div>
+        </form>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab iste, reprehenderit saepe ipsa minus assumenda!</p>
+    </section>
+
 
     <footer>
-
-
+        <div>
+            <h4>Ready to build sustainable growth with Matcha?</h4>
+            <form>
+                <div class="">
+                    <input type="email" name="email"/><button>Sing Up Free <i class="bi bi-arrow-right"></i></button>
+                </div>
+            </form>
+            <p>Want to learn more? <a href="#">Schedule a demo <i class="bi bi-arrow-right"></i></a></p>
+        </div>
+        <div>
+            <div>
+                <p><strong>Platform</strong></p>
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+            </div>
+            <div>
+                <p><strong>Platform</strong></p>
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+            </div>
+            <div>
+                <p><strong>Platform</strong></p>
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+            </div>
+        </div>
     </footer>
 
 
